force-app/main/default/objects/Lead_Related_Person__c/Lead_Related_Person__c.object-meta.xml
<CustomObject>
    <label>Lead Related Person</label>
    <nameField>
        <displayFormat>LRPN-{00000000}</displayFormat>
        <label>Lead Related Person Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Related Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>