force-app/main/default/objects/Lead_Related_Person__c/fields/Afilliate_Type__c.field-meta.xml
<CustomField>
    <fullName>Afilliate_Type__c</fullName>
    <label>Afilliate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JN Bank</fullName>
            </value>
            <value>
                <fullName>Political</fullName>
            </value>
            <value>
                <fullName>Credit Card Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>