force-app/main/default/objects/Lead_Related_Person__c/fields/Home_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Phone Number</label>
    <type>Phone</type>
</CustomField>