force-app/main/default/objects/Lead_Related_Person__c/fields/JN_Location__c.field-meta.xml
<CustomField>
    <fullName>JN_Location__c</fullName>
    <label>JN Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JN_Locations</valueSetName>
    </valueSet>
</CustomField>