force-app/main/default/objects/Lead_Related_Person__c/fields/Lead_and_Referral__c.field-meta.xml
<CustomField>
    <fullName>Lead_and_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead and Referral</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Related Persons</relationshipLabel>
    <relationshipName>Lead_Related_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>