force-app/main/default/objects/Lead_Related_Person__c/fields/TItle__c.field-meta.xml
<CustomField>
    <fullName>TItle__c</fullName>
    <description>Lead title</description>
    <label>TItle</label>
    <type>Picklist</type>
</CustomField>