force-app/main/default/objects/Lead_Related_Person__c/fields/TRN__c.field-meta.xml
<CustomField>
    <fullName>TRN__c</fullName>
    <description>Tax registration number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TRN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>