force-app/main/default/objects/Lead_Related_Person__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Relationship__c</columns>
    <columns>Lead_and_Referral__c</columns>
    <columns>Afilliate_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>