force-app/main/default/objects/Lead_Related_Person__c/listViews/Lead_Persons.listView-meta.xml
<ListView>
    <fullName>Lead_Persons</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Role__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Relationship__c</columns>
    <columns>Afilliate_Type__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Mobile_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Lead Persons</label>
</ListView>